--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
 
     <footer>
-        Desarrollado por: Tec. Luis Guerra
+        Desarrollado por: Psociety
     </footer>
 
     <script src="script.js"></script>
