--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de Reportes  Diarios</title>
+    <title>Generador de Reportes Diarios</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -65,7 +65,8 @@
             <select id="tipoEstructura">
                 <option value="">-- Seleccione --</option>
                 <option value="Pequeño Productor">Pequeño Productor</option>
-                <option value="Producción de Patio">Producción de Patio</option>
+                <option value="Vivienda y Establecimiento">Vivienda y Establecimiento</option>
+                <option value="Nuevo Punto Creado">Nuevo Punto Creado</option>
                 <option value="Estructura Complementaria">Estructura Complementaria</option>
                 <option value="Estructura sin Producción">Estructura sin Producción</option>
                 <option value="Guardada Parcial">Guardada Parcial</option>
@@ -79,7 +80,6 @@
                 <option value="No es Estructura">No es Estructura</option>
                 <option value="Establecimiento de Salud">Establecimiento de Salud</option>
                 <option value="Parque o Plaza Pública">Parque o Plaza Pública</option>
-                <option value="Establecimiento">Establecimiento</option>
             </select>
         </div>
         
