--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Generador de Archivos de Texto</h1>
+        <h1>Generador de Reportes Diarios</h1>
         
         <!-- Código Técnico -->
         <div class="form-group">
