--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generador de Reporte Diario</title>
+    <title>Generador de Reportes Diarios</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -65,6 +65,7 @@
             <select id="tipoEstructura">
                 <option value="">-- Seleccione --</option>
                 <option value="Pequeño Productor">Pequeño Productor</option>
+                <option value="Producción de Patio">Producción de Patio</option>
                 <option value="Vivienda y Establecimiento">Vivienda y Establecimiento</option>
                 <option value="Nuevo Punto Creado">Nuevo Punto Creado</option>
                 <option value="Estructura Complementaria">Estructura Complementaria</option>
@@ -120,7 +121,7 @@
     </div>
 
     <footer>
-        Desarrollado por: Psociety
+        Desarrollado por: Psociety.sv
     </footer>
 
     <script src="script.js"></script>
